--- a/styles/styles.css
+++ b/styles/styles.css
@@ -180,12 +180,11 @@ html {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  border-radius: 50%;
   border: 4px solid #fff;
+  border-radius: 15px;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease;
-  margin: 20px auto;
-
+  margin-bottom: 50px;
 }
 
 .profile-img:hover {
